k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong
  labels:
    app.kubernetes.io/name: ping-pong
spec:
  ingressClassName: nginx
  rules:
    - host: ping-pong.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ping-pong
                port:
                  name: http
