k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ping-pong
  labels:
    app.kubernetes.io/name: ping-pong
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ping-pong
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
          protocol: TCP
